fix footer contact text alignment on mobile

--- a/style.css
+++ b/style.css
@@ -1897,6 +1897,7 @@ a.contact-detail-value:hover {
 
   .contact-text {
     text-align: left;
+    border-bottom: 9px;
   }
   
   .card-image {
